kubernetes/uui_backend/dnsutils.yml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: cube
spec:
  containers:
  - name: dnsutils
    image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
