kubernetes/uui_backend/uuid_app.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: myapp-deployment
  namespace: cube
  labels:
    app: uuid-app
    type: backend
spec:
  template:
    metadata:
      name: uuid-app-pod
      labels:
        app: uuid-app
        type: backend
    spec:
      containers:
        - name: uuid-container
          image: febot50806/uuid-backend:latest
          imagePullPolicy: Always
  replicas: 3
  selector:
    matchLabels:
      app: uuid-app
      type: backend
