kubernetes/uui_backend/clusterip.yml
apiVersion: v1

kind: Service

metadata:
  name: uuid-app-service
  namespace: cube
spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 80
  selector:
    app: uuid-app
    type: backend
