kubernetes/uui_backend/nodeport.yml
apiVersion: v1

kind: Service

metadata:
  name: uuid-app-service
  namespace: cube
spec:
  type: NodePort
  ports:
    - targetPort: 5000
      port: 80
      nodePort: 30005
  selector:
    app: uuid-app
    type: backend
