kubernetes/uui_backend/redis_service.yml
apiVersion: v1

kind: Service

metadata:
  name: redis-service
  namespace: cube
spec:
  type: ClusterIP
  ports:
    - targetPort: 6379
      port: 6379
  selector:
    app: my-redis
    type: cache
